--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <ul>
@@ -14,33 +15,52 @@
         </li>
     </ul>
 
-    <h1>Entre em contato comigo</h1>
+    <h1 class= "center">Entre em contato comigo</h1>
 
-    <form>
-        <label for="nome">Nome:</label> <br>
-        <input type="text" id="nome">
-        <br>
-        <br>
-        <label for="email">E-mail:</label> <br>
-        <input type="email" id="email">
-        <br>
-        <br>
-        <label for="assunto">Assunto:</label> <br>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-        <br>
-        <br>
-        <button>Enviar</button>
-
-        <h2>Endereço</h2>
-        <p>Rua Agostinho Navarro,1086</p>
-        <p>São Paulo</p>
-
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.654871376007!2d-46.79972148522734!3d-23.58083578467325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce556dde4199ef%3A0x457e7a3fd220c1d8!2sR.%20Agostinho%20Navarro%2C%201086%20-%20Conceicao%2C%20Osasco%20-%20SP%2C%2006140-000!5e0!3m2!1spt-BR!2sbr!4v1659056617429!5m2!1spt-BR!2sbr" 
-        width="400" height="250" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </form>
+    <div class= "container margem-baixo">
+        <div>
+            <form>
+                <label for="nome">Nome:</label> <br>
+                <input type="text" id="nome">
+                <br>
+                <br>
+                <label for="email">E-mail:</label> <br>
+                <input type="email" id="email">
+                <br>
+                <br>
+                <label for="assunto">Assunto:</label> <br>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <br>
+                <br>
+                <button>Enviar</button>
+            </form>
+        </div>
+        <div class="margem-left">
+            <h2>Endereço</h2>
+            <p>Rua Agostinho Navarro,1086</p>
+            <p>São Paulo</p>
+    
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.654871376007!2d-46.79972148522734!3d-23.58083578467325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce556dde4199ef%3A0x457e7a3fd220c1d8!2sR.%20Agostinho%20Navarro%2C%201086%20-%20Conceicao%2C%20Osasco%20-%20SP%2C%2006140-000!5e0!3m2!1spt-BR!2sbr!4v1659056617429!5m2!1spt-BR!2sbr" 
+            width="400" height="250" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div> 
+    <hr>
+    <footer>
+        <div class="container">
+            <a href="https://www.linkedin.com/in/luan-piauilino-da-silva-20091b184/" target="_blank">
+                <img class="tamanho-logo" src="https://pics.freeicons.io/uploads/icons/png/19743989771561032665-512.png" alt="Logo LinkedIn">
+            </a>
+            <a href="https://github.com/LuanPiauilino" target="_blank">
+                <img class="tamanho-logo" src="https://pics.freeicons.io/uploads/icons/png/10412341841540553610-512.png" alt="Logo GitHub">
+            </a>
+        </div>
+        <p class="center">
+            Todos os direitos reservados: Luan Piauiliono &copy; 
+        </p>
+    </footer>
 </body>
 </html>
