--- a/index.html
+++ b/index.html
@@ -5,31 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-    <ul>
-        <li><a href="index.html">Home</a>
+    <ul class="menu">
+        <li>
+            <a href="index.html">Home</a>
         </li>
-        <li><a href="contato.html">Contato</a>
+        <li>
+            <a href="contato.html">Contato</a>
         </li>
     </ul>
 
 
-    <h1>Sobre o Luan</h1>
-    <p>Tenho 20 anos, estou fazendo o curso na Generation Brasil de Desnvolvedor Web Java, e pretendendo continuar estudando mais sobre tecnologia e desenvolvimento de sistemas web.</p>
-    <p>Trabalhei como Jovem Aprendiz na Natura Cosméticos, e trabalhei de forma informal com os meus pais na feira, adquiri muita experiência nessas duas oprtunidades e muitos amigos, tive que aprender a resolver problemas e a me comunicar melhor.</p>
-    <p>Mas no Início de 2022 decide focar na área de tecnologia, o que começou apenas com uma curiosidade de ver como se faz um projeto web no youtube, hoje ele isso como a minha vida e meu futuro.</p>
-    <p>Isso é um pouco do mim, se quiser saber mais, acesse meu LinkedIn e meu GitHub.</p>
-    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGlXQ-UBQof7A/profile-displayphoto-shrink_800_800/0/1650609721706?e=1664409600&v=beta&t=iCbWBZx2c30qElJR9SFBDGWbyqnpJ05xDB5TbYwIvOc"
+    <h1 class="center">Sobre o Luan</h1>
+
+    <div class= "container" >
+        <div class= "sobre" >
+            <p class="center">Tenho 20 anos, estou fazendo o curso na Generation Brasil de Desnvolvedor Web Java, e pretendendo continuar estudando mais sobre tecnologia e desenvolvimento de sistemas web.</p>
+            <p class="center">Trabalhei como Jovem Aprendiz na Natura Cosméticos, e trabalhei de forma informal com os meus pais na feira, adquiri muita experiência nessas duas oprtunidades e muitos amigos, tive que aprender a resolver problemas e a me comunicar melhor.</p>
+            <p class="center">Mas no Início de 2022 decide focar na área de tecnologia, o que começou apenas com uma curiosidade de ver como se faz um projeto web no youtube, hoje ele isso como a minha vida e meu futuro.</p>
+            <p class="center">Isso é um pouco do mim, se quiser saber mais, acesse meu LinkedIn e meu GitHub.</p>
+        </div>
+        <div>
+            <img class= "br-50 sobre" src="https://media-exp1.licdn.com/dms/image/C4D03AQGlXQ-UBQof7A/profile-displayphoto-shrink_800_800/0/1650609721706?e=1664409600&v=beta&t=iCbWBZx2c30qElJR9SFBDGWbyqnpJ05xDB5TbYwIvOc"
             alt="Minha foto de perfil"/>
-    <h2>Minha Música Favorita do Momento</h2>
-    <iframe width="560" height="315" 
-    src="https://www.youtube.com/embed/UZ8o4Nm5APc" 
-    title="YouTube video player" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen></iframe>
+        </div>
+    </div>
     
+    <h2 class="center">Minha Música Favorita do Momento</h2>
+
+    <div class="container margem-baixo">
+        <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/UZ8o4Nm5APc" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen></iframe>
+    </div>
+    <hr>
+    <footer>
+        <div class="container">
+            <a href="https://www.linkedin.com/in/luan-piauilino-da-silva-20091b184/" target="_blank">
+                <img class="tamanho-logo" src="https://pics.freeicons.io/uploads/icons/png/19743989771561032665-512.png" alt="Logo LinkedIn">
+            </a>
+            <a href="https://github.com/LuanPiauilino" target="_blank">
+                <img class="tamanho-logo" src="https://pics.freeicons.io/uploads/icons/png/10412341841540553610-512.png" alt="Logo GitHub">
+            </a>
+        </div>
+        <p class="center">
+            Todos os direitos reservados: Luan Piauiliono &copy; 
+        </p>
+    </footer>
 </body>
 </html>
