--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <ul>
+    <ul class="menu">
         <li><a href="index.html">Home</a>
         </li>
         <li><a href="contato.html">Contato</a>
@@ -21,18 +21,18 @@
         <div>
             <form>
                 <label for="nome">Nome:</label> <br>
-                <input type="text" id="nome">
-                <br>
+                <input type="text" id="nome" onkeyup="validaNome()">
+                <div id="txtNome"></div>
                 <br>
                 <label for="email">E-mail:</label> <br>
-                <input type="email" id="email">
-                <br>
+                <input type="email" id="email" onkeyup="validaEmail()">
+                <div id="txtEmail"></div>
                 <br>
                 <label for="assunto">Assunto:</label> <br>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <textarea name="assunto" id="assunto" cols="30" rows="5" onkeyup="validaAssunto()"></textarea>
+                <div id="txtAssunto"></div>
                 <br>
-                <br>
-                <button>Enviar</button>
+                <button onclick="enviar()">Enviar</button>
             </form>
         </div>
         <div class="margem-left">
@@ -45,7 +45,9 @@
             style="border:0;" 
             allowfullscreen="" 
             loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade"
+            onmousemove="mapaZoom()" onmouseout="mapaNormal()"
+            id="mapa"></iframe>
         </div>
     </div> 
     <hr>
@@ -62,5 +64,7 @@
             Todos os direitos reservados: Luan Piauiliono &copy; 
         </p>
     </footer>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
